Программирование страницы поставщика. Kylosov

--- a/VinylRecordsApplication.csproj
+++ b/VinylRecordsApplication.csproj
@@ -71,6 +71,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Pages\Manufacturer\Elements\Manufacturer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\Manufacturer\Main.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -89,6 +93,9 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Pages\Manufacturer\Elements\Manufacturer.xaml.cs">
+      <DependentUpon>Manufacturer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Pages\Manufacturer\Main.xaml.cs">
       <DependentUpon>Main.xaml</DependentUpon>
     </Compile>
@@ -133,7 +140,6 @@
     <Resource Include="Image\ic_VinilRecord.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Pages\Manufacturer\Elements\" />
     <Folder Include="Pages\Records\Elements\" />
     <Folder Include="Pages\Supply\Elements\" />
   </ItemGroup>
